@@ -1,13 +1,0 @@
-#ifndef Pds_WaveformV1_hh
-#define Pds_WaveformV1_hh
-
-#include <stdint.h>
-
-namespace Pds {
-
-  class WaveformV1 {
-  };
-
-}
-
-#endif
